--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-center" href="#">
+          <a class="nav-link d-flex align-items-center" href="https://eirocsystems.com/index.html#about">
             <i class="bi bi-info-circle me-1"></i> About
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-center" href="#">
+          <a class="nav-link d-flex align-items-center" href="https://eirocsystems.com/index.html#contact">
             <i class="bi bi-envelope me-1"></i> Contact
           </a>
         </li>
